2008-07-18  Matthias Clasen  <mclasen@redhat.com>

	* tests/Makefile.am:
	* tests/option-test.c: Remove
	* glib/tests/option-context.c: Add all GOptionContext tests here.

2008-07-16  Matthias Clasen  <mclasen@redhat.com>

	Bug 334234 – "printf" format error

	* glib/gslice.c (mem_error): Avoid a warning when printing a pid_t.
	Pointed out by Morten Welinder. 

2008-07-16  Matthias Clasen  <mclasen@redhat.com>

	Bug 406120 – g_ascii_strtod

	* glib/gstrfuncs.c (g_ascii_strtod): Document that this
	function does accept localized infinities and nans. Reported
	by Morten Welinder.

2008-07-16  Matthias Clasen  <mclasen@redhat.com>

	Bug 482413 - get_contents_stdio -- overflow and memory corruption

	* glib/gfileutils.c (get_contents_stdio): Detect overflow and
	error out. Reported by Morten Welinder. 

2008-07-16  Matthias Clasen  <mclasen@redhat.com>

	Bug 542332 – small fix for error message in GMarkup
	
	* glib/gmarkup.c: Improve an error message. 
	Patch by Ryan Lortie

2008-07-14  Matthias Clasen  <mclasen@redhat.com>

	Bug 428048 – 2 of 51 tests fail on Solaris

	* tests/iochannel-test.c: Ignore the error if iconv doesn't
	support EUC-JP.

2008-07-14  Matthias Clasen  <mclasen@redhat.com>

	* tests/option-test.c: Print error messages when something fails.

2008-07-14  Matthias Clasen  <mclasen@redhat.com>

	Bug 467707 – test_iconv_state() in tests/convert-test.c fails on AIX 5.3

	* tests/convert-test.c (test_iconv_state): Skip this test if
	CP1255 is not supported.  

2008-07-10  Ryan Lortie  <desrt@desrt.ca>

 	* docs/reference/glib/glib-sections.txt:
 	* glib/glib.symbols:
 	* glib/gmarkup.c:
 	* glib/gmarkup.h: add functions g_markup_parse_context_{push,pop} in
 	order to provide some small hooks on which to build easy-to-use
 	subparsers.
 
 	* glib/tests/Makefile: add new test
 	* glib/tests/markup-subparser.c: new test for subparsers
 
 	Fixes bug #337518.

2008-07-05  Matthias Clasen  <mclasen@redhat.com>
