@@ -1,8 +1,10 @@
 2008-07-18  Matthias Clasen  <mclasen@redhat.com>
 
 	* tests/Makefile.am:
+	* tests/keyfile-test.c:
 	* tests/option-test.c: Remove
 	* glib/tests/option-context.c: Add all GOptionContext tests here.
+	* glib/tests/keyfile.c: Add all GKeyFile tests here.
 
 2008-07-16  Matthias Clasen  <mclasen@redhat.com>
 
